--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,7 +1,78 @@
-<%= form_for @tweet do |f| %>
+<h2>Google map</h2>
+
+<input id="address" type="textbox" value="">
+<input type="button" value="地図を検索" onclick="codeAddress()">
+<div id="display">緯度経度が表示されるよ！</div>
+
+<div id='map'></div>
+
+<style>
+    #map {
+        height: 400px;
+        width: 400px;
+    }
+</style>
+
+<script>
+    let map
+
+    const display = document.getElementById('display')
+
+    // mapの表示関数 
+    function initMap() {
+        geocoder = new google.maps.Geocoder()
+
+        // mapの初期位置, 縮尺を定義
+        map = new google.maps.Map(document.getElementById('map'), {
+            center: {
+                lat: 35.6458437,
+                lng: 139.7046171
+            },
+            zoom: 12,
+        });
+    }
+
+    let geocoder
+
+    // 地図検索関数
+    function codeAddress() {
+        let inputAddress = document.getElementById('address').value;
+
+        geocoder.geocode({
+            'address': inputAddress
+        }, function (results, status) {
+            if (status == 'OK') {
+                map.setCenter(results[0].geometry.location);
+                var marker = new google.maps.Marker({
+                    map: map,
+                    position: results[0].geometry.location
+                });
+
+            display.textContent = "検索結果：" + results[ 0 ].geometry.location
+            } else {
+                alert('該当する結果がありませんでした：' + status);
+            }
+        });
+    }
+</script>
+
+<script
+    src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap"  
+    async defer>
+</script>
+
+<h3>場所投稿フォーム</h3>
+<%= form_for(@tweet, :url => { controller:'tweets', action:'create'})do |f| %>
+
+    <p>
+    <%= f.label :address %>
+    <%= f.text_field :address, size: "50x1" %>
+    </p>
+
     <div class="field">
       <%= f.label :body %>
       <%= f.text_field :body, :size => 140 %>
     </div>
-    <%= f.submit "Tweetする" %>
+
+    <%= f.submit "送信"%>
 <% end %>
